--- a/index.html
+++ b/index.html
@@ -1,9 +1,16 @@
 <!doctype html>
-<html lang="en">
+<html lang="pl">
   <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Artur Koza</title>
+    <title>Artur Koza - conductor</title>
   </head>
   <body>
     <div id="root"></div>
